infra/monitoring/grafana/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: hivewiki
spec:
  parentRefs:
    - name: my-alb-gateway
      namespace: kube-system
      sectionName: grafana
  hostnames:
    - grafana.hive-wiki.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
